# alx-low_level_programming

./: .gitignore  101-crackme_password
0x00-hello_world/: 101-quote.c
0x01-variables_if_else_while/: 0-positive_or_negative.c  100-print_comb3.c  101-print_comb4.c  102-print_comb5.c  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt.c  5-print_numbers.c  6-print_numberz.c  7-print_tebahpla.c  8-print_base16.c  9-print_comb.c
0x02-functions_nested_loops/: #102-fibonacci.c#  #2-print_alphabet_x10.c#  #main.h#  .#main.h  0-putchar  0-putchar.c  1-alphabe  1-alphabet.c  1-main.c  100-times_table.c  11-print_to_98.c  3-islower.c  7-print_last_digit.c  _putchar.c  a.out  main.h
0x03-debugging/: 1-main.c  main.h
0x04-more_functions_nested_loops/: #5-more_numbers.c#  10-print_triangle.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  8-print_square.c  9-fizz_buzz.c  main.h
0x05-pointers_arrays_strings/: #100-atoi.c#  .#100-atoi.c  .#5-rev_string.c  0-reset_to_98.c  (+9 more)
0x07-pointers_arrays_strings/: #4-strpbrk.c#  .#4-strpbrk  .#4-strpbrk.c  100-set_string.c  2-strchr.c  3-strspn.c  4-strpbrk.c  5-strstr.c  7-print_chessboard.c  8-print_diagsums.c  CMakeLists.txt  main.h
0x13-more_singly_linked_lists/: 0-print_listint.c  1-listint_len.c  10-delete_nodeint.c  100-reverse_listint.c  101-print_listint_safe.c  102-free_listint_safe.c  103-find_loop.c  2-add_nodeint.c  3-add_nodeint_end.c  4-free_listint.c  5-free_listint2.c  6-pop_listint.c  7-get_nodeint.c  8-sum_listint.c  9-insert_nodeint.c  CMakeLists.txt  lists.h  m  main.c  o
(+153 files in other folders)
